# fsmanager

./: .gitignore  .stylish-haskell.yaml  README.md  cabal.project  flake.nix
app-root/: CHANGELOG.md  fsmanager.cabal
app-root/exe/: Main.hs
app-root/src/: Greeting.hs
app-root/src/FSM/Core/: App.hs
app-root/src/FSM/Core/Domain/: Command.hs  FileSystem.hs  Path.hs  Types.hs
app-root/src/FSM/Core/Effect/: MonadConsole.hs  MonadFS.hs
app-root/src/FSM/Core/Interpreter/: CommandInterpreter.hs
app-root/src/FSM/Core/Parser/: CommandParser.hs
